# video-streaming-server

./: .gitignore  CMakeLists.txt
client/: package-lock.json  package.json
client/src/: App.js  HLSVideoPlayer.js  LiveStream.js  VideoStream.js
live-streaming-client/: client.py
live-streaming-client/gRPC/: stream_service_pb2.py  stream_service_pb2_grpc.py
live-streaming-client/grpc/: grpc_setting.sh  stream_service.proto  stream_service_pb2.py  stream_service_pb2_grpc.py
live-streaming-server/: CMakeLists.txt  index.js  package-lock.json  package.json
live-streaming-server/ar/: CMakeLists.txt  ar.cpp  ar.py  ar_camera.py  preprocess.py  preprocess_image.py
live-streaming-server/camera-client/: CMakeLists.txt  camera-client.cpp
live-streaming-server/camera-client/grpc/: grpc_setting.sh  stream_service.grpc.pb.h  stream_service.pb.cc  stream_service.pb.h  stream_service.proto
live-streaming-server/camera-server/: CMakeLists.txt  camera-server.cpp
live-streaming-server/client/: CMakeLists.txt  client  client.cpp  grpc.proto
live-streaming-server/client/client.dSYM/Contents/Resources/DWARF/: client
live-streaming-server/client/grpc/: grpc_setting.sh  stream_service.grpc.pb.cc  stream_service.grpc.pb.h  stream_service.pb.cc  stream_service.pb.h  stream_service.proto
live-streaming-server/live-streaming-server/: ar.py  client.py
live-streaming-server/live-streaming-server/gRPC/: grpc_setting.sh  stream_service.proto
live-streaming-server/live-streaming-server/image_process/: ar.py  ar_camera.py  preprocess_video.py
live-streaming-server/server/: CMakeLists.txt  Makefile  server  server.cpp
live-streaming-server/server/server.dSYM/Contents/Resources/DWARF/: server
my_app/: App.js  CameraExample.js  SplashScreen.js  VideoStream.js  Videos.js  package-lock.json  package.json
opencv_server/: main.py
opencv_server/boost_version/: Makefile  main.cpp
opencv_server/cpp/: client.cpp  server.cpp
opencv_server/cpp/client/: Makefile  client.cpp
opencv_server/templates/: index.html
react_client/vie-react-creative-portfolio-agency-template-2022-04-11-23-33-29-utc/Main_files/vie/src/components/Video-with-team/: video-with-team_stream.jsx
react_client/vie-react-creative-portfolio-agency-template-2022-04-11-23-33-29-utc/Main_files/vie/src/pages/mobile-app/: mobile-app-dark.jsx
